@@ -1,5 +1,10 @@
 2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/util.py (is_method):
+	New function. Use with contractual and memoize.
+
+2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/base/observable.py:
 	Add contracts.
 
